# LitPy

./: .gitignore  Chrysalis Chapter 1-100.epub  Mother of Learning.epub  Pipfile  README.md  Salvos 0001.epub  Sample.py  The Second Coming Of Gluttony Chapter 1-100.epub  main.py  old.py  pyproject.toml  repl.py  text.txt
builder/: builder.py
getit/: getit.py
getit/sources/: royalroad.py
litpy/: builder.py  litpy.py  model.py  sourcedriver.py
litpy/sources/: driver.py  royalroad.py  wuxia.py
