[tool.poetry]
name = "litpy"
version = "0.1.0"
description = ""
authors = ["TheChiren <57400580+TheChiren@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.4.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
EbookLib = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
